<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="233dp"
        android:layout_height="182dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:gravity="center"
        android:textColor="#FAF7F7"
        android:textSize="25dp"
        android:fontFamily="serif-monospace"
        tools:text="@string/Welcome" />

    <TextView
        android:id="@+id/textInit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Continuar"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="serif-monospace"
        android:textColor="#FFFFFF"
        tools:text="@string/Continuar" />

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_marginTop="30dp"
        android:hint="Email">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_lock"
        app:counterMaxLength="16"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        android:layout_marginTop="30dp"
        android:hint="Contraseña">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonInit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_botton"
        android:text="@string/btnInicio"
        app:backgroundTint="@null"
        tools:text="@string/btnInicio"
        android:onClick="login"/>


    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="49dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:padding="5dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/txtNoAccount"
            android:layout_width="181dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/NoAccount"
            android:textColor="@color/white"
            tools:text="@string/NoAccount" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="163dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Registro"
            android:textColor="#FF0000"
            tools:text="@string/Registro" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="163dp"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/passwordForgotten"
        android:textColor="#FF0"
        tools:text="@string/passwordForgotten"
        android:onClick="forgotPassword"/>


</LinearLayout>