<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CitiJuarez">



    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#425C76"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="9dp"
            android:background="#00FFFFFF"
            android:onClick="home"
            app:srcCompat="@drawable/homes"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="468dp" />


        <ImageButton
            android:id="@+id/favsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="-47dp"
            android:background="#00FFFFFF"
            android:onClick="favorite"
            app:srcCompat="@drawable/hearts"
            tools:layout_editor_absoluteX="245dp"
            tools:layout_editor_absoluteY="490dp" />

        <ImageButton
            android:id="@+id/userButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="-48dp"
            android:background="#00FFFFFF"
            android:onClick="user"
            app:srcCompat="@drawable/user"
            tools:layout_editor_absoluteX="224dp"
            tools:layout_editor_absoluteY="601dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/cajeroJuarez"
        android:textColor="#425C76"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtType"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:ems="10"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="52dp"
        android:onClick="availableT"
        android:text="@string/edit"
        android:textColor="#0000ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:ems="10"
        android:gravity="center"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text=""
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/edtService"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textPersonName"
        android:text=""
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="52dp"
        android:onClick="availableS"
        android:text="@string/edit"
        android:textColor="#0000ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtMoney"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textPersonName"
        android:text=""
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="52dp"
        android:onClick="availableM"
        android:text="@string/edit"
        android:textColor="#0000ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="243dp"
        android:layout_height="42dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/round_botton"
        android:onClick="saveData"
        android:text="@string/save"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/tipo"
        android:textColor="#425C76"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/dinero"
        android:textColor="#425C76"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/servicio"
        android:textColor="#425C76"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="243dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:text="@string/map"
        app:backgroundTint="@null"
        android:onClick="location"
        android:background="@drawable/round_botton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

</androidx.constraintlayout.widget.ConstraintLayout>