<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Banamex">

    <ScrollView
        android:layout_width="400dp"
        android:layout_height="544dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.48000002">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">
                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="0dp"
                    android:onClick="laPazCiti"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/citiban_resized" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:gravity="center"
                    android:text="@string/sucursalBan1"
                    android:onClick="laPazCiti"
                    android:textSize="30dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#425C76"/>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">
                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="4dp"
                    android:onClick="reformaCiti"
                    android:src="@drawable/citiban_resized" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:gravity="center"
                    android:text="@string/sucursalBan2"
                    android:textSize="30dp"
                    android:onClick="reformaCiti"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#425C76"/>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">
                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="4dp"
                    android:onClick="mayo5"
                    android:src="@drawable/citiban_resized" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:gravity="center"
                    android:text="5 de mayo"
                    android:textSize="30dp"
                    android:onClick="mayo5"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#425C76"/>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">
                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="4dp"
                    android:onClick="juarez"
                    android:src="@drawable/citiban_resized" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:gravity="center"
                    android:text="@string/sucursalBan4"
                    android:textSize="30dp"
                    android:onClick="juarez"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#425C76"/>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">
                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="4dp"
                    android:onClick="poniente25"
                    android:src="@drawable/citiban_resized" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="100dp"
                    android:gravity="center"
                    android:text="@string/sucursal25pon"
                    android:textSize="30dp"
                    android:onClick="poniente25"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#425C76"/>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#425C76"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="9dp"
            android:background="#00FFFFFF"
            android:onClick="home"
            app:srcCompat="@drawable/homes"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="468dp" />


        <ImageButton
            android:id="@+id/favsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="-47dp"
            android:background="#00FFFFFF"
            android:onClick="favorite"
            app:srcCompat="@drawable/hearts"
            tools:layout_editor_absoluteX="245dp"
            tools:layout_editor_absoluteY="490dp" />

        <ImageButton
            android:id="@+id/userButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="-48dp"
            android:background="#00FFFFFF"
            android:onClick="user"
            app:srcCompat="@drawable/user"
            tools:layout_editor_absoluteX="224dp"
            tools:layout_editor_absoluteY="601dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/citibanamex"
        android:textColor="#425C76"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>